# GuideWire_DevTrails_Hackathon

./: .gitignore  README.md  seed.sql
RAG/: .env  main.py  render.yaml  requirements.txt
RiskWire-app/front-end/: app.json  package-lock.json  package.json  ts_errors.txt
admin/: .env  README.md  eslint_output.txt  index.html  package-lock.json  package.json  render.yaml
backend/: Dockerfile  package-lock.json  package.json  server.js
pricing-engine/: .env  .env.example  .gitignore  README.md  es-ai-endpoints.md  gig-app-es-ai-endpoints.md  index.html  main.py  omnidex_advanced_risk_model.pkl  pyproject.toml  render.yaml  requirements.txt
pricing-engine/api/: __init__.py  dependencies.py  main.py  middleware.py
pricing-engine/api/routers/: claims.py  data_quality.py  es_ai.py  hallucination.py  health.py  legacy_oracle.py
pricing-engine/api/schemas/: common.py  requests.py  responses.py
pricing-engine/config/: settings.py
pricing-engine/data/generators/: __init__.py  claim_generator.py  constants.py  labeler.py  location_generator.py  pipeline.py  rider_generator.py
pricing-engine/features/: __init__.py  behavioral_features.py  data_quality.py  extractor.py  geo_features.py  hallucination.py  temporal_features.py
pricing-engine/models/: __init__.py  reason_codes.py
pricing-engine/scripts/: generate_data.py  run_server.py  train_models.py
pricing-engine/services/: __init__.py  model_registry.py  payout_calculator.py
pricing-engine/tests/: __init__.py  test_all_endpoints.py
pricing-engine/training/: __init__.py  preprocessor.py
(+99 files in other folders)
